# MyCaptchaOCR

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  启动.bat
docs/: APPROACH.md  DESKTOP_UI.md  RESULTS.md
scripts/: adaptive_ocr_pipeline.py  adaptive_ocr_rerank.py  check_ocr_env.py  evaluate_ocr_results.py  ocr_desktop_app.py  ocr_project_env.py  ocr_service.py
