[project]
name = "MyCaptchaOCR"
version = "0.1.0"
description = "OpenCV and ddddocr pipeline for noisy Chinese captcha images"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "ddddocr==1.6.1",
  "opencv-python==4.13.0.92",
  "opencv-contrib-python==4.13.0.92",
  "pillow==12.2.0",
  "pandas==2.3.3",
  "numpy==2.2.6",
]
